server1/log/log_2023_12_03_01h57_55.txt
Unhandled exception on new_message_handler
Traceback (most recent call last):
  File "/Users/jeanpaul/Library/Python/3.9/lib/python/site-packages/telethon/client/updates.py", line 570, in _dispatch_update
    await callback(event)
  File "/Users/jeanpaul/Projects/stage_telegram/server1/server1.py", line 96, in new_message_handler
    await group_channels.new_message_handler(event, prompt_c, prompt_a, model_c, model_a,temperature, max_tokens, how_many_hours_verification, collection_messages, collection_channels, collection_channels_score, collection_channels_simiarity)
  File "/Users/jeanpaul/Projects/stage_telegram/server1/class_group.py", line 27, in new_message_handler
    await self.update_channels_similarity(message, collection_messages, collection_channels_similarity, how_many_hours_verification)
  File "/Users/jeanpaul/Projects/stage_telegram/server1/class_group.py", line 80, in update_channels_similarity
    for affirmation, truth_value in ast.literal_eval(message.affirmations).items():
  File "/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/ast.py", line 62, in literal_eval
    node_or_string = parse(node_or_string, mode='eval')
  File "/Applications/Xcode.app/Contents/Developer/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/ast.py", line 50, in parse
    return compile(source, filename, mode, flags,
  File "<unknown>", line 1
    Message: "test est bon"
           ^
SyntaxError: invalid syntax
openai model for propaganda marks = gpt-4
openai model for affirmations     = gpt-3.5-turbo
temperature                       = 0.2
max_len_telegram_message          = 600
verification of the messages for the last 0.016 hours

0  positive author attitude
1  the message is advantageous for the actual political power
2  exaggerations
3  lack of object concordance
4  appeal to the intellect
5  appeal to emotions
6  appeal to virtues
7  appeal to ethics
8  appeal to blinding generalities as fatherland, peace, glory, justice, honor
9  appeal to fear
10 appeal to the threat from other countries
11 appeal to hatred
12 appeal to authority
13 appeal to human rights
14 criticism of the actual political power
15 generalizations
16 seemingly scientific appearance, but only seemingly
17 real scientific proofs of the information
18 real proofs of the information
19 euphemismes replacing offensive expressions
20 euphemismes replacing war or victims
21 formal register of the texte
22 beneficiaries of the information regarding to politics
23 flattery to the reader
24 dilemma between only two possibilities
25 criticisme of a person instead of criticism of his arguments
26 underestimation of the proofs of the opponents

-1002074952363
set()
server1 listens to the channels {-1002078508192, -1002142650141, -1002033244827, -1002061517552, -1002074952363}
server1 has received the message :test est bon

OpenAI response: ['0. 0', '1. 0', '2. 0', '3. 0', '4. 0', '5. 0', '6. 0', '7. 0', '8. 0', '9. 0', '10. 0', '11. 0', '12. 0', '13. 0', '14. 0', '15. 0', '16. 0', '17. 0', '18. 0', '19. 0', '20. 0', '21. 0', '22. 0', '23. 0', '24. 0', '25. 0', '26. 0']

Message: "test est bon"

{
    "Test is good": True
}
Failed to insert record invalid syntax (<unknown>, line 1)
scores_of_this_channel = [1, 0, -1, 0, -1, 0]
new_average = -1 / 6 = -0.16666666666666666
Updated average score for channel -1002074952363 to -0.16666666666666666
